<resources>
    <string name="app_name">BackToBike</string>
    <string name="title_activity_trace">Trace</string>
    <string name="title_route">Title route</string>
    <string name="cancel">CANCEL</string>
    <string name="cancelled">CANCELLED</string>
    <string name="save">SAVE</string>
    <string name="confirm">CONFIRM</string>
    <string name="sharedpreferences">backtobike_sharedpreferences</string>
    <string name="server_key">AAAAg5ho7EE:APA91bG9pRx7eyOE5JT4O_bBm7c5AcHEVHyyMHVrH9R9d9dxorr3tXCH0bFF-a-_UuOr469a6oX_xOvPvNI6N_-a3s0ONjxUDHq5_k_MAn8uHZ8_EtpYXDG8bMOQ5q0xllqaH5Qv3ic4</string>
    <string name="weather_api_key">3713ca929eee4947bc090a1e7dc0c625</string>
    <string name="language">en</string>
    <string name="error_weather_api">Error to get weather forecast.</string>
    <string name="arrow_back_image">arrow_back_image</string>
    <string name="login_creation">Creation of login</string>
    <string name="hi">Hi</string>
    <string name="error_login">Please give a login</string>
    <string name="login_already_on_firebase">The login provided is already taken. Please give another login.</string>
    <string name="friend_request_reception">You have received a friend request from </string>
    <string name="friend_request_ongoing">is waiting for your friend request acceptance.</string>
    <string name="friend_request_refused">has refused your friend request.</string>
    <string name="friend_request_accepted">has accepted your friend request.</string>
    <string name="new_invitation">You have received </string>
    <string name="new_invitation2">new invitation.</string>
    <string name="new_invitations">new invitations.</string>
    <string name="invitation_pending">invitation is pending.</string>
    <string name="invitations_pending">invitations are pending.</string>
    <string name="invitation_cancelled">invitation has been cancelled.</string>
    <string name="invitations_cancelled">invitations have been cancelled.</string>
    <string name="no_new_information">No new information since your last visit…</string>
    <string name="error_synchronization">Error. Impossible to finish synchronization.</string>
    <string name="error_forbidden_characters">Login cannot be saved. Please do not use forbidden characters (\'.\', \'#\', \'$\', \'[\', or \']\').</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="guests">Guests:</string>
    <string name="send">SEND</string>
    <string name="add_a_new_friend">Add a friend</string>
    <string name="select_a_route">Select a route:</string>
    <string name="select_a_route_spinner">Select a route</string>
    <string name="enter_a_comment">Enter a comment:</string>
    <string name="invitation_send">Your invitation has been sent!</string>
    <string name="bike_event_saved">Your bike event has been saved!</string>
    <string name="friend_accepted">friend has accepted the trip!</string>
    <string name="friends_accepted">friends have accepted the trip!</string>
    <string name="friend_refused">friend has refused the trip!</string>
    <string name="friends_refused">friends have refused the trip!</string>
    <string name="ok">OK</string>
    <string name="warning_title">Warning!</string>
    <string name="error_forbidden_characters2">Comments cannot be saved. Please do not use forbidden characters (\'.\', \'#\', \'$\', \'[\', or \']\').</string>
    <string name="image_friend">image friend</string>
    <string name="title_add_a_friend">Add a friend</string>
    <string name="create_a_login">Create your login : </string>
    <string name="enter_a_login">Enter a login : </string>
    <string name="login_not_known">Login doesn\'t exists. Please check the login provided.</string>
    <string name="login_already_among_friends">This person is already among your friends.</string>
    <string name="error_check_login">An error occurred during login checking. Try again later.</string>
    <string name="my_login_is">My login : </string>
    <string name="title_friend_request">Friend request</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="question_friend_request_1">Do you want </string>
    <string name="question_friend_request_2">to be your friend ?</string>
    <string name="suppr_button">SUPPR.</string>
    <string name="friend_already_in_list">Friend already in your list</string>
    <string name="friend_added_later">Friend will be added when internet connexion will be available.</string>
    <string name="error_login_format">Error in login provided. Please check login.</string>
    <string name="friend_deleted_later">Friend will be deleted when internet connexion will be available.</string>
    <string name="error_access_data">Error to access data.</string>
    <string name="friend_added">Friend has been added. Waiting for his answer.</string>
    <string name="add_segment_message">Please click on the map to create a new segment</string>
    <string name="add_start_point_message">Please click on the map to add a start point</string>
    <string name="add_end_point_message">Please click on the map to add a arrival point</string>
    <string name="delete_message">Please click on segments or markers to delete</string>
    <string name="title_add_name_route">Title of the route</string>
    <string name="add_name_route">Enter a title for the route</string>
    <string name="error_add_name_route">Please give a title for the route</string>
    <string name="error_current_location">Error to get current location</string>
    <string name="give_permission">Please give your permission</string>
    <string name="leave_authorization">Are you sure that you want to leave ?</string>
    <string name="error_route_not_finished">Route is not finished. Please complete it before saving.</string>
    <string name="new_route_saved">The new route has been saved!</string>
    <string name="route_update_saved">Modifications have been saved!</string>
    <string name="no_date">Please provide a date for the trip</string>
    <string name="no_time">Please provide a time for the trip</string>
    <string name="no_route">Please select a route for the trip</string>
    <string name="date_before_now">The schedule indicated is before now. Provide a later date.</string>
    <string name="error_forbidden_characters3">Route title cannot be saved. Please do not use forbidden characters (\'.\', \'#\', \'$\', \'[\', or \']\').</string>
    <string name="alarm_notif_title">Next bike trip</string>
    <string name="channel_alarm_backtobike">channel_alarm_backtobike</string>
    <string name="notification_title">Reminder : the trip </string>
    <string name="notification_title2days">is still planned in two days.</string>
    <string name="notification_title4hours">is at</string>
    <string name="notification_new_invit">has sent you a new invitation!</string>
    <string name="notification_cancel_event">has cancelled a bike trip.</string>
    <string name="notification_reject_invit">has rejected your invitation.</string>
    <string name="notification_accept_invit">has accepted your invitation!</string>
    <string name="notification_reject_event">cannot attend your bike trip…</string>
    <string name="notification_new_friend_request">has sent you a friend request!</string>
    <string name="notification_friend_has_accepted">has accepted your friend request!</string>
    <string name="notification_friend_has_rejected">has rejected your friend request…</string>
    <string name="notification_new_invit_title">New invitation!</string>
    <string name="notification_cancel_event_title">Bike trip cancellation</string>
    <string name="notification_reject_invit_title">Invitation rejected</string>
    <string name="notification_accept_invit_title">Invitation accepted</string>
    <string name="notification_reject_event_title">Bike trip rejection</string>
    <string name="notification_new_friend_request_title">New friend request!</string>
    <string name="notification_friend_has_accepted_title">Friend request accepted</string>
    <string name="notification_friend_has_rejected_title">Friend request rejected</string>
    <string name="error_send_notification">Error. Cannot send the notification</string>
    <string name="facebook_app_id">291137544820428</string>
    <string name="fb_login_protocol_scheme">fb291137544820428</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="connect_with_google">Connect with Google</string>
    <string name="error_connection">Problem occurred during connexion.</string>
    <string name="cancel_connection">Authentication has been cancelled</string>
    <string name="success_connection">You are connected</string>
    <string name="at">at</string>
    <string name="reject">REJECT</string>
    <string name="accept">ACCEPT</string>
    <string name="change">CHANGE</string>
    <string name="delete">DELETE</string>
    <string name="error_data_restoration">Error during data restoration. Please restart app.</string>
    <string name="add_to_my_routes">Add to my routes</string>
    <string name="delete_route">The route has been deleted</string>
    <string name="accept_invitation">The invitation has been accepted</string>
    <string name="reject_invitation">The invitation has been rejected</string>
    <string name="reject_event">Absence to this trip is confirmed</string>
    <string name="delete_event">The trip has been deleted.</string>
    <string name="route_added_to_my_routes">The route has been added to "my routes".</string>
    <string name="bike_event_cancelled">The trip has been cancelled.</string>
    <string name="confirm_cancel_trip">Are you sure that you want to cancel the trip ?</string>
    <string name="confirm_reject_event">Are you sure to confirm your absence to this trip ?</string>
    <string name="confirm_reject_invit">Are you sure that you want to reject this invitation ?</string>
    <string name="confirm_delete_route">Are you sure that you want to delete this route ?</string>
    <string name="route_not_available">The route is not available.</string>
    <string name="count0_my_events">You have no events planned. Click on the cross of toolbar to create a new one.</string>
    <string name="count0_my_route">You have no route. Click on the cross of toolbar to create a new one.</string>
    <string name="count0_my_invits">You have received no invitation.</string>
    <string name="my_friends_menu">My friends</string>
    <string name="my_bikeevents_menu">My next bike trips</string>
    <string name="my_invit_menu">My invitations</string>
    <string name="my_routes_menu">My routes</string>
    <string name="back_to_main_menu">Back to main page</string>
    <string name="sign_out_menu">Sign out</string>
    <string name="title_my_friends">My Friends</string>
    <string name="title_my_events">My next bike trips</string>
    <string name="title_create_event">Create a new bike trip</string>
    <string name="title_my_invits">My invitations</string>
    <string name="title_my_routes">My routes</string>
    <string name="title_trace_route">Trace a route</string>
    <string name="title_main_page">Back To Bike</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="arrow_next_image">arrow_next_image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_next_bike_trips">My next bike trips !</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="weather_forecast_at">Weather Forecast at </string>
    <string name="news">News</string>
    <string name="invitations">INVITATIONS</string>
    <string name="new_friends">NEW FRIENDS</string>
    <string name="monday">Mon.</string>
    <string name="tuesday">Tues.</string>
    <string name="wednesday">Wed.</string>
</resources>