<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/my_friends_menu_item"
                    android:icon="@drawable/baseline_people_white_24"
                    app:actionLayout="@layout/invit_counter"
                    android:title="@string/my_friends_menu" />
                <item
                    android:id="@+id/my_events_menu_item"
                    android:icon="@drawable/baseline_event_white_24"
                    android:title="@string/my_bikeevents_menu" />
                <item
                    android:id="@+id/my_invitations_menu_item"
                    android:icon="@drawable/baseline_mail_white_24"
                    app:actionLayout="@layout/invit_counter"
                    android:title="@string/my_invit_menu" />
                <item
                    android:id="@+id/my_routes_menu_item"
                    android:icon="@drawable/baseline_location_on_white_24"
                    android:title="@string/my_routes_menu" />
                <item
                    android:id="@+id/back_to_main_page_menu_item"
                    android:icon="@drawable/baseline_arrow_back_white_24"
                    android:title="@string/back_to_main_menu" />
                <item
                    android:id="@+id/sign_out_menu_item"
                    android:icon="@drawable/baseline_power_settings_new_white_24"
                    android:title="@string/sign_out_menu" />
            </group>
        </menu>
    </item>
</menu>