<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- DATE PLANNED -->
    <LinearLayout
        android:id="@+id/layout_calendar_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:src="@drawable/baseline_calendar_today_black_24"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="22sp"
            android:textColor="@color/colorBlack"
            android:text="02/02/2018"
            android:id="@+id/text_date"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="22sp"
            android:textColor="@color/colorBlack"
            android:text="@string/at"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="22sp"
            android:textColor="@color/colorBlack"
            android:text="14:30"
            android:id="@+id/text_hour"/>

    </LinearLayout>

    <!-- TITLE ROUTE -->
    <TextView
        android:id="@+id/title_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="Tour de Corbeil"/>

    <!-- MAP ROUTE -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <!-- ARROW LEFT -->
        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="0dp"
            android:layout_weight="15"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_navigate_before_black_48"
            android:contentDescription="@string/arrow_back_image" />

        <!-- MAPS -->
        <include
            android:id="@+id/map_layout"
            layout="@layout/map_layout"
            android:layout_width="0dp"
            android:layout_weight="70"
            android:layout_height="200dp"/>

        <!-- ARROW RIGHT -->
        <ImageView
            android:id="@+id/arrow_next"
            android:layout_width="0dp"
            android:layout_weight="15"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_navigate_next_black_48"/>

    </LinearLayout>

    <!-- FRIENDS JOINING -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/friends_recyclerview"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="60dp"/>

    <!-- BUTTONS -->
    <RelativeLayout
        android:id="@+id/buttons_layout"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- BUTTON LEFT / RIGHT -->
        <Button
            android:id="@+id/left_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_alignParentStart="true"
            android:drawableTop="@drawable/round_cancel_white_48"
            android:text="@string/reject"
            android:background="@color/colorWhite"
            android:textColor="@android:color/holo_red_dark"/>

        <!-- BUTTON ACCEPT -->
        <Button
            android:id="@+id/right_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_alignParentEnd="true"
            android:drawableTop="@drawable/baseline_check_circle_white_48"
            android:text="@string/accept"
            android:background="@color/colorWhite"
            android:textColor="@android:color/holo_green_dark"/>

    </RelativeLayout>

</LinearLayout>